2008-07-08  Akira TAGOH  <tagoh@redhat.com>

	* utils/imsettings-stop.c (main): Fix a typo.

2008-07-03  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/connection.c (xim_connection_forward_client_message_event):
	ifdef conditioned code.

	* tests/rhbz_453358.c: new testcase.

	* src/factory_info.c (imsettings_info_manager_real_get_current_user_im):
	check if current user IM is still valid. (rhbz#453358)
	(imsettings_info_manager_real_get_current_system_im): likewise.

	* tests/gcit_11.c: Update to use more common function.

	* tests/gcit_5.c: likewise.

	* tests/imsettings-request.c: likewise.

	* tests/main.c (imsettings_test_restart_daemons_full): new function.
	(imsettings_test_restart_daemons): likewise.
	(imsettings_test_reload_daemons): likewise.

2008-07-02  Akira TAGOH  <tagoh@redhat.com>

	* tests/imsettings-request.c: New testcase.

	* src/factory_info.c (imsettings_info_manager_validate_from_file_info):
	Fix a regression - validate xinputrc and .xinputrc as well.

2008-07-02  Akira TAGOH  <tagoh@redhat.com>

	* m4macros/tar.m4: get rid of h option for tar to include a dangling
	symlink for testcase.

	* tests/testcases/Makefile.am (dist-hook): include all the testcases
	into the archive.

2008-06-30  Akira TAGOH  <tagoh@redhat.com>

	* tests/gcit_11.c: new testcase for Issue#11.

	* src/factory_info.c (imsettings_info_manager_validate_from_file_info):
	check the config file's suffix (Issue#11).

2008-06-26  Akira TAGOH  <tagoh@redhat.com>

	* backends/gconf/main.c (main): unref the main loop.

	* src/factory_info.c (main): unref the main loop.

	* backends/xim/main.c (main): unref the main loop.

	* src/factory.c (main): unref the main loop.

2008-06-18  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/loopback.c (xim_loopback_finalize): unset the selection
	owner.

	* backends/xim/utils.c (xim_lookup_atom): deal with the X event in
	the queue before doing something.

	* backends/xim/server.c (xim_server_set_property): work around for